tests/sema/valid/basic.vit
proc main() -> int {
  let value = 1;
  give value;
}
