tests/sema/invalid/private_access.vit
space demo/app;
use demo/private_dep as dep;

proc main() -> int {
  give dep.hidden();
}
